--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <!-- main content container -->
         <div class="flex flex-col md:flex-row">
             <!-- shape card container -->
-            <div class="flex-1 grid grid-cols-1 md:grid-cols-3">
+            <div class="flex-1 grid grid-cols-1 md:grid-cols-3 gap-6">
                 <!-- Triangle card -->
                 <div class="card py-[50px] w-96 bg-base-100 shadow-xl">
                     <figure><img src="images/triangle.png" alt="Triangle" /></figure>
                     <div class="card-body text-center px-[43px]">
-                        <h2 class="card-title mx-auto">Triangle!</h2>
+                        <h2 class="card-title mx-auto">Triangle</h2>
                         <p>Area (A) = 0.5 X b X h</p>
                         <div class="my-[22px]">
                             <input id="triangle-base" class="w-[95px] pl-3 py-[7px] rounded bg-[rgb(241,241,241)]"
@@ -58,7 +58,7 @@
                 <div class="card py-[50px] w-96 bg-base-100 shadow-xl">
                     <figure><img src="images/rectangle.png" alt="rectangle" /></figure>
                     <div class="card-body text-center px-[43px]">
-                        <h2 class="card-title mx-auto">Rectangle!</h2>
+                        <h2 class="card-title mx-auto">Rectangle</h2>
                         <p>Area (A) = w X l</p>
                         <div class="my-[22px]">
                             <!-- rectangle length -->
@@ -80,17 +80,33 @@
                     </div>
                 </div>
                 <!-- Parallelogram card -->
-                <!-- <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                            alt="Shoes" /></figure>
-                    <div class="card-body">
-                        <h2 class="card-title">Shoes!</h2>
-                        <p>If a dog chews shoes whose shoes does he choose?</p>
-                        <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
+                <div class="card py-[50px] w-96 bg-base-100 shadow-xl">
+                    <figure><img src="images/parallelogram.png" alt="parallelogram" /></figure>
+                    <div class="card-body text-center px-[43px]">
+                        <h2 class="card-title mx-auto">Parallelogram</h2>
+                        <p>Area (A) = b X h</p>
+                        <div class="my-[22px]">
+                            <!-- parallelogram base -->
+                            <input id="parallelogram-base"
+                                class="w-[95px] pl-3 py-[7px] rounded bg-[rgb(241,241,241)]" type="text"
+                                placeholder="b">
+                            <span class="ml-2 mr-4">cm</span>
+                            <!-- parallelogram height -->
+                            <input id="parallelogram-height"
+                                class="w-[95px] pl-3 py-[7px] rounded bg-[rgb(241,241,241)]" type="text"
+                                placeholder="h">
+                            <span class="ml-2 mr-4">cm</span>
+                        </div>
+                        <div>
+                            <p class="text-xl">Area: <span id="parallelogram-area"></span><span> cm<sup>2</sup></span>
+                            </p>
+                        </div>
+                        <div class="card-actions mt-[29px]">
+                            <button onclick="calculateParallelogramArea()"
+                                class="btn btn-primary w-full text-xl font-bold">Calculate</button>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <!-- Parallelogram card -->
                 <!-- <div class="card w-96 bg-base-100 shadow-xl">
                     <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -112,6 +128,7 @@
             </div>
         </div>
     </main>
+    <script src="scripts/parallelogram-area.js"></script>
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-area.js"></script>
 </body>
